<resources>
    <string name="app_name">MapView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MapView</string>
    <string name="nav_header_subtitle">https://github.com/peterLaurence</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="welcome">Welcome to MapView demo.\nUse the lateral menu to select between available demo.</string>

    <string name="map_alone">Map demo</string>
    <string name="map_constrained">Map constrained demo</string>
    <string name="map_markers">Map and markers demo</string>
    <string name="map_paths">Map paths demo</string>
    <string name="map_remote_http">Remote HTTP demo</string>
    <string name="map_deferred_configuration">Deferred config demo</string>
    <string name="map_rotating">Rotating map demo</string>

    <string name="change_area">Change area</string>

    <!-- Fragment ids -->
    <string name="fragment_map_alone" translatable="false">MapAloneFragment</string>
    <string name="fragment_map_markers" translatable="false">MapMarkersFragment</string>
    <string name="fragment_map_constrained" translatable="false">MapConstrainedFragment</string>
    <string name="fragment_map_path" translatable="false">MapPathFragment</string>
    <string name="fragment_remote_http" translatable="false">RemoteHttpFragment</string>
    <string name="fragment_deferred" translatable="false">DeferredFragment</string>
    <string name="fragment_rotating" translatable="false">RotatingFragment</string>
</resources>
