<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map_alone"
            android:title="@string/map_alone" />
        <item
            android:id="@+id/nav_map_constrained"
            android:title="@string/map_constrained" />
        <item
            android:id="@+id/nav_map_markers"
            android:title="@string/map_markers" />
        <item
            android:id="@+id/nav_map_paths"
            android:title="@string/map_paths" />

        <item
            android:id="@+id/nav_remote_http"
            android:title="@string/map_remote_http" />

        <item
            android:id="@+id/nav_map_deferred_configuration"
            android:title="@string/map_deferred_configuration" />

        <item
            android:id="@+id/nav_map_rotating"
            android:title="@string/map_rotating" />
    </group>

</menu>
